test/semantic_errors/invalid_arrayindex1.mc
void main() {
    int a[2];
    int b;
    char i;
    b = a[i];
}